<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">



    <item android:title="@string/main_menu">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_drawer_button_alarm"
                    android:title="@string/alarms" />
                <item
                    android:id="@+id/menu_drawer_button_traitment"
                    android:title="@string/treatment" />
                <item
                    android:id="@+id/menu_drawer_button_settings"
                    android:title="@string/settings" />
            </group>
        </menu>
    </item>

</menu>
