<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:layout_margin="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_treatment"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="20dp">
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_treatment"
            android:textColor="@android:color/black"
            android:textSize="@dimen/settings_subtitle"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/black"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/activity_treatment_linearlayout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@android:color/black"
            android:layout_marginEnd="10dp"
            android:textSize="@dimen/textSettings"/>

        <EditText
            android:id="@+id/activity_treatment_edittext_namedrug"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_of_the_drug"
            android:textSize="@dimen/textSettings"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="90">

        <CheckBox
            android:id="@+id/activity_treatment_checkbox_morning"
            android:text="@string/morning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="30"/>
        <CheckBox
            android:id="@+id/activity_treatment_checkbox_midday"
            android:text="@string/midday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="30"/>
        <CheckBox
            android:id="@+id/activity_treatment_checkbox_evening"
            android:text="@string/evening"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="30"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dosage"
            android:textSize="@dimen/textSettings"
            android:textColor="@android:color/black"
            android:layout_marginEnd="10dp"/>

        <EditText
            android:id="@+id/activity_treatment_edittext_dosage_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/quantity"
            android:layout_marginEnd="10dp"
            android:inputType="number"/>

        <Spinner
            android:id="@+id/activity_treatment_spinner_dosage_unit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:entries="@array/dosage_drugs"
            android:textAlignment="center"

            >

        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="60">

        <Button
            android:id="@+id/activity_treatment_button_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="cancel"
            android:layout_marginEnd="25dp"
            android:layout_weight="30"/>
        <Button
            android:id="@+id/activity_treatment_button_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="add"
            android:layout_weight="30"/>

    </LinearLayout>

</LinearLayout>
