<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_centerInParent="true"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorBackgroundTuto">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dp">

        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TutoTextView"
            android:text="@string/tuto_contact"
            android:textAlignment="center"/>

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

         <Button
             android:layout_gravity="center"
             android:id="@+id/fragment_contact_button_phonebook"
             android:layout_margin="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/phone_book"
             android:textSize="@dimen/text_size_button_tuto"
             android:padding="20dp" />

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/fragment_contact_edittext_phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:textColorHint="@android:color/white"
                    android:layout_marginEnd="5dp"
                    android:inputType="phone"
                    android:textSize="@dimen/text_size_button_tuto"
                    tools:ignore="Autofill" />

                <Button
                    android:id="@+id/fragment_contact_button_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add"
                    android:scaleX="0.8"
                    android:scaleY="0.8"
                    android:textSize="@dimen/text_size_button_tuto"
                    android:padding="20dp" />

            </LinearLayout>

            <ScrollView
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="50dp"
                tools:ignore="NestedScrolling">

                <LinearLayout
                    android:id="@+id/fragment_contact_linearlayout_display_contact"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>

            </ScrollView>


        </LinearLayout>

        <Button
            android:id="@+id/fragment_contact_button_next"
            android:layout_margin="15dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:enabled="false"
            android:textSize="@dimen/text_size_button_tuto"
            android:padding="20dp" />

    </LinearLayout>

</ScrollView>
