<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">

<include layout="@layout/toolbar"/>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.TreatmentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >


        <TextView
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/treatment"
            android:textSize="@dimen/settings_title"
            android:textColor="@color/colorPrimaryDark"
            android:background="@color/colorBackgroundTreatment2"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        </LinearLayout>

    <LinearLayout
        android:padding="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_treatment2"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="20dp">
            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/morning"
                android:textColor="@android:color/black"
                android:textSize="@dimen/settings_subtitle"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/black"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/activity_treatment_linearlayout_treatment_morning"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:orientation="vertical"/>
    </LinearLayout>
        <LinearLayout
            android:padding="20dp"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_treatment2"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginBottom="20dp">
                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/midday"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/settings_subtitle"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@android:color/black"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/activity_treatment_linearlayout_treatment_midday"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:orientation="vertical"/>
        </LinearLayout>

        <LinearLayout
            android:padding="20dp"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_treatment2"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginBottom="20dp">
                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/evening"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/settings_subtitle"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@android:color/black"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/activity_treatment_linearlayout_treatment_evening"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:orientation="vertical"/>
        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_margin="20dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="back"/>



        </LinearLayout>


    </LinearLayout>

</ScrollView>
</LinearLayout>